syntax = "proto3";

import "google/protobuf/empty.proto";

option csharp_namespace = "GrpcClient";

package sniffer;

service StreamingData {
    
  rpc GetStreamingData (stream streamingRequest) returns (stream streamingReply);
}

message streamingReply {  
      int32 index = 1;             
}

message streamingRequest {
     int32 source_port = 1;
     int32 dest_port = 23;
     string source_ip = 22;
     string dest_ip = 27;
     string source_mac = 24;
     string dest_mac = 25;         
}
